// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/blocksEditor/blocks/list-item should match Display snapshot 1`] = `
<div>
  <ul>
    <li>
      test-value
    </li>
  </ul>
</div>
`;

exports[`components/blocksEditor/blocks/list-item should match Input snapshot 1`] = `
<div>
  <ul>
    <li>
      <input
        class="ListItem"
        data-testid="list-item"
        value="test-value"
      />
    </li>
  </ul>
</div>
`;
